# PyDMA

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.jupyter_config/: migrated
doc/: create_gif.py
notebooks/: dma_results_P45B_23.json  getting_started.ipynb
notebooks/TestData/: FR23_pOCV_CH_entry01.csv  FR23_pOCV_CH_entry02.csv  FR23_pOCV_CH_entry03.csv  FR23_pOCV_CH_entry04.csv  FR23_pOCV_CH_entry05.csv  FR23_pOCV_CH_entry06.csv  FR23_pOCV_CH_entry07.csv  FR23_pOCV_CH_entry08.csv  FR23_pOCV_CH_entry09.csv
notebooks/TestData/InputData/Graphite/: Gr_Delithiation_Hossain.csv  Gr_Delithiation_Kuecher.csv  Gr_Delithiation_Rehm.csv  Gr_Delithiation_Wetjen.csv  Gr_Lithiation_Hossain.csv  Gr_Lithiation_Kuecher.csv  Gr_Lithiation_Rehm.csv  Gr_Lithiation_Schmitt.csv  Gr_Lithiation_Wetjen.csv  README_AdditionalCitationsNecessary.txt
notebooks/TestData/InputData/LFP/: HAIDI18650_Anode_Delithiation_0C02.csv  HAIDI18650_Anode_Delithiation_0C05.csv  HAIDI18650_Anode_Lithiation_0C02.csv  HAIDI18650_Anode_Lithiation_0C05.csv  HAIDI18650_Cathode_Delithiation_0C02.csv  HAIDI18650_Cathode_Delithiation_0C05.csv  HAIDI18650_Cathode_Lithiation_0C02.csv  HAIDI18650_Cathode_Lithiation_0C05.csv  README_AdditionalCitationsNecessary.txt
notebooks/TestData/InputData/NCA/: GITT_P45b_Cat_NCA_JN_VS_Coin_1_GITT__Extracted_Continuous_pOCP.csv  MoliM35A_PE_Cathode_Delithiation_0C02.csv  MoliM35A_PE_Cathode_Delithiation_0C04.csv  MoliM35A_PE_Cathode_Lithiation_0C02.csv  MoliM35A_PE_Cathode_Lithiation_0C04.csv  P45B_Cathode_Delithiation_0C02.csv  P45B_Cathode_Delithiation_0C03.csv  README_AdditionalCitationsNecessary.txt
notebooks/TestData/InputData/NMC/: LGM36_PE_coin_Cathode_Delithiation_0C02.csv  LGM36_PE_coin_Cathode_Delithiation_0C04.csv  (+3 more)
src/pydma/: __init__.py
src/pydma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pydma/analysis/: __init__.py  degradation.py  dva.py  ica.py
src/pydma/core/: __init__.py  analyzer.py  objectives.py  optimizer.py
src/pydma/electrodes/: __init__.py  blend.py  electrode.py  inhomogeneity.py
src/pydma/preprocessing/: __init__.py  loader.py  smoother.py
src/pydma/silicon/: __init__.py  generator.py
src/pydma/utils/: __init__.py  dma_config.py  results.py  roi.py
src/pydma/visualization/: __init__.py  plots.py
(+27 files in other folders)
