[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydma"
version = "0.1.0"
description = "Battery Degradation Mode Analysis - Python implementation of TUM-EES DegradationModeAnalysis"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "TUM-EES", email = "mathias.rehm@tum.de"},
]
maintainers = [
    {name = "TUM-EES", email = "mathias.rehm@tum.de"},
]
keywords = [
    "battery",
    "degradation",
    "lithium-ion",
    "sodium-ion",
    "OCV",
    "DVA",
    "ICA",
    "electrochemistry",
    "aging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "statsmodels>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/tum-ees/pydma"
Documentation = "https://github.com/tum-ees/pydma#readme"
Repository = "https://github.com/tum-ees/pydma.git"
Issues = "https://github.com/tum-ees/pydma/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pydma.data.ocps" = ["*.csv"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pydma --cov-report=term-missing"
